[gd_scene format=3 uid="uid://cbexj6e2rp8yk"]

[ext_resource type="Theme" uid="uid://ddwm0nvjciyk4" path="res://assets/global_theme.tres" id="1_8gace"]
[ext_resource type="Script" uid="uid://wfde50lpls65" path="res://addons/diablo_huma_studio/db_manager/visual_editors/create_data_type_menu/dbm_create_data_type_menu.gd" id="2_ycx2f"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_ycx2f"]
thickness = 4

[node name="CreateDataTypeMenu" type="Control" unique_id=971347971]
custom_minimum_size = Vector2(1000, 800)
layout_mode = 3
anchors_preset = 0
offset_right = 1000.0
offset_bottom = 800.0
theme = ExtResource("1_8gace")
script = ExtResource("2_ycx2f")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1049016209]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1972372197]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer" unique_id=912786827]
layout_mode = 2
text = "Create Data Type"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=1918741966]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxLine_ycx2f")

[node name="ClassNameRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1927040024]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ClassNameRow" unique_id=1021279468]
layout_mode = 2
text = "Class Name:"

[node name="ClassNameInput" type="LineEdit" parent="MarginContainer/VBoxContainer/ClassNameRow" unique_id=2097342068]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "MyDataType"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=1867041657]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxLine_ycx2f")

[node name="PropertiesHeader" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=78038446]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PropertiesHeader" unique_id=1840028817]
layout_mode = 2
size_flags_horizontal = 3
text = "Properties"

[node name="AddPropertyButton" type="Button" parent="MarginContainer/VBoxContainer/PropertiesHeader" unique_id=904031136]
layout_mode = 2
text = "+"

[node name="PropertiesContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=547995398]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=1195307608]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxLine_ycx2f")

[node name="ErrorsLabel" type="Label" parent="MarginContainer/VBoxContainer" unique_id=747367055]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.552962, 1.3596937e-06, 4.813075e-07, 1)
theme_override_colors/font_shadow_color = Color(0.1764706, 0, 0, 1)
theme_override_font_sizes/font_size = 40

[node name="AddDataTypeButton" type="Button" parent="MarginContainer/VBoxContainer" unique_id=1927354945]
unique_name_in_owner = true
layout_mode = 2
text = "Add DataType"

[connection signal="pressed" from="MarginContainer/VBoxContainer/PropertiesHeader/AddPropertyButton" to="." method="_on_add_property_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/AddDataTypeButton" to="." method="_on_add_data_type_button_pressed"]
